<?xml version="1.0"?>
<package format="2">

  <name>velodyne_record</name>
  <version>0.0.0</version>
  <description>The velodyne_record package</description>
  <maintainer email="bigae2@gmail.com">Hyun-je</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
